# sam3.c

./: .gitignore  .gitmodules  BENCHMARK.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PERFORMANCE.md  README.md  SECURITY.md  TODO.md  TODO_OPTIMIZATION.md  TODO_PERFORMANCE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/baselines/: efficient.json  hiera.json  tinyvit.json
bindings/python/: exports.txt  pyproject.toml  setup.py
bindings/python/sam3/: __init__.py  _ffi.py  _lib.py  errors.py  video.py
bindings/python/tests/: conftest.py  test_errors.py  test_model.py  test_video.py
bindings/rust/: Cargo.toml  README.md
bindings/rust/sam3/: Cargo.toml  README.md
bindings/rust/sam3-sys/: Cargo.toml  build.rs  wrapper.h
bindings/rust/sam3-sys/src/: lib.rs
bindings/rust/sam3-sys/tests/: version.rs
bindings/rust/sam3/examples/: segment.rs
bindings/rust/sam3/src/: ctx.rs  error.rs  image.rs  lib.rs  log.rs  prompt.rs  result.rs  video.rs
bindings/rust/sam3/tests/: integration.rs
cmake/: FindOpenBLAS.cmake  StaticFfmpeg.cmake
docs/: TODO.md  architecture.md  mobileclip.md  tokenizer.md  weight-format.md
docs/plans/: 2026-03-30-profiler-design.md  2026-03-30-profiler-impl.md  2026-03-30-sam3-project-setup-design.md  2026-03-30-sam3-scaffold.md  2026-04-01-fp16-bf16-compute-design.md  2026-04-01-fp16-bf16-compute-plan.md  2026-04-14-gpu-resident-forwarding-design.md  2026-04-14-gpu-resident-forwarding.md  2026-04-15-benchmarking-system-design.md  2026-04-15-benchmarking-system.md  2026-04-15-python-bindings-design.md  2026-04-15-python-bindings.md  2026-04-16-rust-binding-design.md  2026-04-16-rust-binding.md  2026-04-16-video-tracker-closure-design.md  2026-04-16-video-tracker-closure-plan.md  2026-04-16-video-tracker-design.md  2026-04-16-video-tracker-plan.md
docs/reference/: README.md  architecture.md  fusion.md  image-encoder.md  mask-head.md  processor.md  text-encoder.md
docs/superpowers/notes/: 2026-04-20-sam3-1-tracker-parity-log.md  2026-04-24-batched-segmentation-status.md
docs/superpowers/plans/: 2026-04-17-video-tracker-parity.md  2026-04-18-sam3-1-image-path.md  2026-04-18-video-benchmark.md  2026-04-18-video-io-cli.md  2026-04-19-sam3-1-phase-2-5-wire-video.md  2026-04-20-mobileclip-text-encoder.md  2026-04-20-sam3-1-parity-fixture.md  2026-04-20-sam3-1-tracker-layer-parity.md  2026-04-21-encoder-feature-cache.md  2026-04-22-cache-api-bindings.md  2026-04-23-batched-decoder-mask-scorer.md
docs/superpowers/specs/: 2026-04-17-video-tracker-parity-design.md  2026-04-18-sam3-1-image-path-design.md  2026-04-18-video-benchmark-design.md  2026-04-18-video-io-cli-design.md  2026-04-19-sam3-1-multiplex-tracker-design.md  (+5 more)
docs/tutorial/: 01-tokenizer.md
include/sam3/: sam3.h  sam3_types.h
notebooks/: tinyvit_stage1_finetune.ipynb
python/sam3/: _ffi.py  model.py
scripts/: compare_layer_dumps.py  compare_tracker_layers.py  diff_c_vs_py_layer_dumps.py  dump_c_sam3_1_all_layers.py  dump_mobileclip_text_layers.py  dump_reference_layers.py  dump_sam3_1_all_layers.py  dump_tracker_layers.py  gen_tracker_fixtures.py  inspect_mobileclip_pt.py  refresh_baselines.sh
src/: sam3.c
src/backend/: backend.c  backend.h
src/bench/: bench.c  bench.h  bench_compare.c  bench_compare.h  bench_json.c  bench_json.h  bench_kernels.c  bench_kernels.h  bench_pipeline.c  bench_pipeline.h  bench_video.h  bench_video_end_to_end.c  bench_video_frame.c
src/core/: alloc.c  alloc.h  graph.c  graph.h  half.h  quant.c  quant.h  tensor.c  tensor.h  trace.c  trace.h  weight.c  weight.h  weight_safetensors.c
src/model/: box_ops.c  box_ops.h  decoder.c  decoder.h  encoder.c  encoder.h  feature_cache.c  feature_cache.h  feature_cache_persist.c  feature_cache_persist.h  frame_cache.c  frame_cache.h  graph_helpers.c  graph_helpers.h  image_encoder.c  image_encoder.h  image_encoder_efficientvit.c  image_encoder_efficientvit.h  image_encoder_tinyvit.c  image_encoder_tinyvit.h  mask_decoder.c  mask_decoder.h  memory_attn.c  memory_attn.h  memory_bank.c  memory_bank.h  memory_encoder.c  memory_encoder.h  mobileclip_text.c  mobileclip_text.h  model_misc.c  model_misc.h  necks.c  necks.h  position_encoding.c  position_encoding.h  prompt_encoder.c  prompt_encoder.h  sam3_image.c  sam3_image.h  (+24 more)
src/util/: error.c  error.h  hash.h  image.c  image.h  log.c  log.h  mask_boxes.c  mask_nms.c  mask_postprocess.c  mask_resize.c  mask_select.c  profile.c  profile.h  sam3_platform.h  tensor_dump.c  threadpool.c  threadpool.h  time.c  time.h  video.c  video.h  video_encode.c  video_encode.h  video_internal.h  video_stubs.c
tests/: bench_dtype.c  bench_metal.c  bench_segment.c  bench_segment_batch.c  bench_tokenizer.c  test_batched_ops.c  test_bench.c  test_bench_video.c  test_box_ops.c  test_box_prompt.c  test_cast.c  test_cli_common.c  test_cli_track.c  test_cpu_backend.c  test_cpu_blas.c  test_cpu_kernels.c  test_dispatch.c  test_dispatch_q8.c  test_dynamic_multimask.c  test_elementwise_bf16.c  test_elementwise_f16.c  test_feature_cache.c  test_feature_cache_persist.c  test_fixture_compare.c  test_frame_cache.c  test_graph_helpers.c  test_half.c  test_hash.c  test_helpers.h  test_helpers_png.c  test_helpers_png.h  test_helpers_test.c  test_image.c  test_mask_boxes.c  test_mask_decoder_multiplex_forward.c  test_mask_decoder_nhwc.c  test_mask_decoder_v2_forward.c  test_mask_nms.c  test_mask_postprocess.c  test_mask_resize.c  (+63 more)
tests/data/: bench_corpus.txt  gen_bench_corpus.py
tools/: _cpu_patches.py  cli_bench.c  cli_bench.h  cli_common.c  cli_common.h  cli_convert.c  cli_convert.h  cli_info.c  cli_info.h  cli_segment.c  cli_segment.h  cli_track.c  cli_track.h  cli_track_stub.c  compare_stages.py  compare_tensors.py  compare_text_encoder.py  dump_reference.py  export_efficientsam3.py  gen_fixtures.py  gen_nhwc_fixtures.c  gen_video_parity_fixtures.py  pt_to_safetensors.py  sam3_1_dump_seed.c  sam3_cli.c  sam3_convert.c  sam3_main.c  weight_conv_perm.c  weight_conv_perm.h  weight_rename.c  weight_rename.h
(+114 files in other folders)
