[package]
name         = "sam3"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description  = "Safe Rust bindings to the SAM3 inference engine"

[dependencies]
sam3-sys  = { version = "0.1.0", path = "../sam3-sys" }
thiserror = "1"

[lints]
workspace = true
